force-app/main/default/objects/cpm__Process_Setting__c/cpm__Process_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Process Setting</label>
</CustomObject>