force-app/main/default/objects/cpm__Process_Setting__c/fields/cpm__Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>cpm__Payment_Method__c</fullName>
    <label>Payment Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>