force-app/main/default/objects/cpm__Process_Setting__c/fields/cpm__Processor_Class__c.field-meta.xml
<CustomField>
    <fullName>cpm__Processor_Class__c</fullName>
    <label>Processor Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>