force-app/main/default/objects/cpm__Process_Setting__c/fields/cpm__Target__c.field-meta.xml
<CustomField>
    <fullName>cpm__Target__c</fullName>
    <label>Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>