force-app/main/default/objects/cpm__Process_Setting__c/fields/cpm__Validator_Class__c.field-meta.xml
<CustomField>
    <fullName>cpm__Validator_Class__c</fullName>
    <label>Validator Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>